--- a/src/index.css
+++ b/src/index.css
@@ -25,9 +25,17 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
+#root {
+  width: 100%;
+  max-width: 1280px;
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
 }
 
